--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-chem.o
 chem
 chem.tab.c
 chem.tab.h
@@ -7,3 +6,6 @@ test
 file
 crnparser
 *.o
+src/CRN/location.hh
+src/CRN/CRNParse.cc
+src/CRN/CRNParse.hh
