--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
-chem.o
 chem
 chem.tab.c
 chem.tab.h
 lex.yy.c
 test
 file
+crnparser
+*.o
+src/CRN/location.hh
+src/CRN/CRNParse.cc
+src/CRN/CRNParse.hh
+Makefile
+CMakeCache.txt
+CMakeFiles
+bin
+cmake_install.cmake
+CTestTestfile.cmake
