--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "gnuplot-iostream"]
-	path = gnuplot-iostream
+[submodule "submodules/gnuplot-iostream"]
+	path = submodules/gnuplot-iostream
 	url = https://github.com/dstahlke/gnuplot-iostream
