--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -4,15 +4,19 @@ on: [push]
 
 jobs:
 
-  build:
-
+  pull_modules:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout submodules
       uses: textbook/git-checkout-submodule-action@master
       with:
         remote: true
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
     - name: Build the Docker image
-      uses: actions/checkout@v2
+      depends: pull_modules
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
