--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -18,5 +18,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      depends: pull_modules
+      needs: pull_modules
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
