--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -4,19 +4,13 @@ on: [push]
 
 jobs:
 
-  pull_modules:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout submodules
-      uses: srt32/git-actions@v0.0.3
-      with:
-        args: git submodule update --init --recursive
   build:
 
     runs-on: ubuntu-latest
-    needs: pull_modules
 
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      with:
+        submodules: 'true'
