--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: git submodules update --init --recursive && docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: git submodule update --init --recursive && docker build . --file Dockerfile --tag my-image-name:$(date +%s)
