--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,3 +12,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: git submodule update --init --recursive && docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: Copy the artefacts
+      uses: actions/upload-artifact@v1
+      with:
+        name: coverage
+        path: htmloutput
