Add a short one too

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -17,3 +17,8 @@ jobs:
       with:
         name: coverage
         path: htmloutput
+    - name: Copy the short artefact
+      uses: actions/upload-artifact@v1
+      with:
+        name: coverage_short
+        path: htmloutput/coverage.html
