--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: git submodule update --init --recursive && docker build . --file Dockerfile --tag my-image-name:$(date +%s) && docker-compose up
+      run: git submodule update --init --recursive && docker-compose up
     - name: Copy the artefacts
       uses: actions/upload-artifact@v1
       with:
