Fix mising forward slash

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   chem:
     build:
       context: .
-    command: bash -c 'rm -rf /target/htmloutput; mkdir /target/htmloutput && cd /target/htmloutput && gcovr -e bin/* -r /chem/ --html --html-details -o output.html && gcovr -e bin/* -r chem/ --html -o coverage.html'
+    command: bash -c 'rm -rf /target/htmloutput; mkdir /target/htmloutput && cd /target/htmloutput && gcovr -e bin/* -r /chem/ --html --html-details -o output.html && gcovr -e bin/* -r /chem/ --html -o coverage.html'
     volumes:
         - ./:/target
 
