Add a CI step for code coverage (#42)
* Try doing coverage

* Actually run docker-file

* Add a short one too

* Don't docker build twice

* Fix mising forward slash

* Moved to script, don't use bin folder

* Ignore submodules too

* Don't include tests either

Co-authored-by: Rasmus Rendal <rasmus@rend.al>

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -11,4 +11,14 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: git submodule update --init --recursive && docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: git submodule update --init --recursive && docker-compose up
+    - name: Copy the artefacts
+      uses: actions/upload-artifact@v1
+      with:
+        name: coverage
+        path: htmloutput
+    - name: Copy the short artefact
+      uses: actions/upload-artifact@v1
+      with:
+        name: coverage_short
+        path: htmloutput/coverage_short.html
