first real test for evaluatorfrontend

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,11 +42,10 @@ enable_testing()
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
 
-
 add_executable(tests
 	${TEST_SOURCES}
 	${SOURCES}
 	${BISON_CRNParse_OUTPUTS}
 	${FLEX_CRNScan_OUTPUTS}
 )
-target_link_libraries(tests ${GTEST_BOTH_LIBRARIES})
+target_link_libraries(tests ${GTEST_BOTH_LIBRARIES} Boost::iostreams)
