Added OpenRTPlotter repo to project, also font and shader folder is important for the renderer. The shader is especially important, without it the screen will be white and the shaders isn't pre-compiled atm
	modified:   CMakeLists.txt
	new file:   fonts/COPYING
	new file:   fonts/FreeSans.ttf
	new file:   shader/f.glsl
	new file:   shader/font.f.glsl
	new file:   shader/font.v.glsl
	new file:   shader/v.glsl
	modified:   src/evaluatorfrontend.cpp
	modified:   src/evaluatorfrontend.h
	modified:   src/main.cpp
	new file:   submodules/OpenRTPlotter

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/gnuplot-iostream"]
 	path = submodules/gnuplot-iostream
 	url = https://github.com/dstahlke/gnuplot-iostream
+[submodule "submodules/OpenRTPlotter"]
+	path = submodules/OpenRTPlotter
+	url = https://github.com/SquareBlightStudio/OpenRTPlotter.git
